k8s/middleware-monitoring-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
