k8s/middleware-www.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-www
  namespace: default
spec:
  redirectRegex:
    regex: "^https?://pruebasergio.com/(.*)"
    replacement: "https://www.pruebasergio.com/${1}"
    permanent: true
